# legal_rag_llm

./: .env.example  .gitignore  Makefile  README.md  compose.zenml.yml  pyproject.toml
.zen/: config.yaml
configs/: feature_engineering.yaml  legal_data_etl.yaml  train_sparse_embedding.yaml
data/qdrant_data/: raft_state.json
llm_engineering/: settings.py
llm_engineering/application/crawlers/: base.py  dispatcher.py  legal.py
llm_engineering/application/evaluation/: llm_judge.py  rag_evaluation.py
llm_engineering/application/networks/: __init__.py  base.py  cross_encoder.py  (+2 more)
llm_engineering/domain/: chat.py  chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  evaluation.py  queries.py  types.py
llm_engineering/infrastructure/: inference_pipeline_api.py  openapi_config.py
models/: sparse_bm25_model.pkl  sparse_tfidf_model.pkl
notebooks/: 000-generate_instruction_data.ipynb  001-evaluate_search.ipynb  001-evaluate_search.py
notebooks/outputs/: 001-evaluate_bm25_20251221_155238.ipynb  001-evaluate_bm25_20251221_225625.ipynb  001-evaluate_tfidf_20251221_160547.ipynb  001-evaluate_tfidf_20251221_223852.ipynb
pipelines/: __init__.py  feature_engineering.py  legal_data_etl.py  train_sparse_embedding.py
scripts/: delete_collections.py  export_qdrant_documents.py
src/: utils.py
steps/: crawl_legal_links.py
steps/crawling/: crawl_legal_links.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/sparse_encoder_training/: __init__.py  query_data_warehouse.py  train.py
tools/: run.py
(+34 files in other folders)
