[project]
name = "llm-engineering"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Minh", email = "minhjohn4@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"

dependencies = [
    "zenml[server]==0.91.2",
    "pymongo>=4.6.2",
    "click>=8.0.1",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "numpy==1.26.4",
    "datasets>=3.0.1",
    "torch>=2.6.0",
    # Digital data ETL
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.1",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "jmespath>=1.0.1",
    "chromedriver-autoinstaller>=0.6.4",
    # Feature engineering
    "qdrant-client>=1.8.0",
    "langchain>=0.2.11",
    "sentence-transformers>=3.0.0",
    # RAG
    "langchain-openai>=0.1.3",
    "jinja2>=3.1.4",
    "tiktoken>=0.7.0",
    "fake-useragent>=1.5.1",
    "langchain-community>=0.2.11",
    "langchain_cohere>=0.1.3",
    # Inference
    "fastapi>=0.100,<0.111",
    "uvicorn>=0.30.6",
    "opik>=0.2.2",
    "underthesea>=8.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.9",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_engineering"]


